--- a/includes/components/carousel/carousel.css
+++ b/includes/components/carousel/carousel.css
@@ -17,6 +17,8 @@
     height: auto;
     overflow: hidden;
     margin: 0px auto;
+    box-sizing: border-box;
+    padding-top: 5px;
 }
 .app-carousel-wrapper{
     position: relative;
