--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,3 +59,34 @@ h1,h2,h3,h4,h5,h6,p,li,a,ol,span{
     color: #ffffff;
     text-align: center;
 }
+
+.main-button{
+    outline: none;
+    outline-width: 0;
+    width: 160px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    background-color: #83bf41;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+
+    margin: 20px auto;
+
+    font-family: 'Quicksand-Regular';
+    font-size: 1rem;
+    color: #ffffff;
+    text-align: center;
+    cursor: pointer;
+
+    transition: box-shadow 0.25s, background-color 0.25s;
+}
+.main-button:hover{
+    text-decoration: none;
+    background-color: #94cc4c;
+    box-shadow: 0px 3px 5px -2px rgba(0,0,0,0.8);
+}
