--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -276,7 +276,7 @@
     position: relative;
     width: 100%;
     margin: 0px;
-    padding: 40px 0px;
+    padding: 50px 0px;
     box-sizing: border-box;
     background-color: #f3f3f3;
 }
@@ -382,4 +382,176 @@
 .funcionalidades-item:hover span{
     /*font-size: 1.1rem;*/
     font-family: 'Quicksand-SemiBold';
+}
+
+/*******************/
+
+.cursos-seccion{
+    position: relative;
+    width: 100%;
+    height: 550px;
+    margin: 0px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cursos-seccion::after{
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-color: #f3f3f3;
+    left: 50%;
+    left: calc(50% - 25px);
+    left: -moz-calc(50% - 25px);
+    top: -25px;
+    transform: rotate(-45deg);
+}
+
+.cursos-fondo{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+}
+
+.cursos-fondo img{
+    display: block;
+    position: absolute;
+    width: 100%;
+    margin: 0px;
+    transform: translateY(-40%);
+    left: 0%;
+    top: 50%;
+}
+.cursos-fondo::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    opacity: 1;
+    background-color: rgba(0,0,0,0.75);
+    mix-blend-mode: multiply;
+}
+            
+.cursos-content{
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0px 50px;
+    height: auto;
+    margin: 0px;
+    display: block;
+    padding-bottom: 100px;
+}
+.cursos-content > h1{
+    display: block;
+    width: auto;
+    margin: 0px;
+    padding: 0px;
+
+    font-family: 'Quicksand-SemiBold';
+    font-size: 1.2rem;
+    color: #ffffff;
+    text-align: center;
+
+    margin-bottom: 30px;
+}
+.cursos-content > h1 span{
+    color: #ff9d00;
+}
+
+.cursos-content > p{
+    display: block;
+    width: 65%;
+    margin: 0px auto;
+    padding: 0px;
+
+    font-family: 'Quicksand-Medium';
+    font-size: 1rem;
+    color: #ffffff;
+    text-align: center;
+
+    margin-top: 30px;
+}
+
+
+.cursos-content-col{
+    position: relative;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: center;
+}
+
+.cursos-content-row{
+    position: relative;
+    width: auto;
+    height: auto;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cursos-content-icono,
+.cursos-content-mas{
+    position: relative;
+    margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    
+}
+.cursos-content-mas{
+    width: 100px;
+    height: auto;
+}
+.cursos-content-icono{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    flex-direction: column;
+    background-color: #f19b07;
+}
+
+.cursos-content-icono img{
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: 0px;
+    margin-bottom: 7px;
+}
+.cursos-content-icono p{
+    display: block;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+
+    font-family: 'Quicksand-SemiBold';
+    font-size: 1rem;
+    color: #ffffff;
+    text-align: center;
+    text-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+}
+
+.cursos-content-mas img{
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0px;
+}
+
+.cursos-carousel{
+    position: relative;
+    width: 100%;
+    transform: translateY(-50%);
 }
