--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -282,26 +282,35 @@
 }
 
 .funcionalidades-seccion > h1,
-.funcionalidades-seccion > p{
+.clientes-seccion > h1,
+.funcionalidades-seccion > p,
+.clientes-seccion > p
+{
     display: block;
     width: auto;
     margin: 0px;
     padding: 0px;
     text-align: center;
 }
-.funcionalidades-seccion > p{
+.funcionalidades-seccion > p,
+.clientes-seccion > p{
     font-size: 1rem;
-    color: #b1b1b1;
+    color: #6d7882;
     font-family: 'Quicksand-Regular';
+}
+.funcionalidades-seccion > p{
     margin-bottom: 30px;
 }
-.funcionalidades-seccion > h1{
+
+.funcionalidades-seccion > h1,
+.clientes-seccion > h1{
     font-size: 1.2rem;
     color: #111111;
     font-family: 'Quicksand-SemiBold';
     margin-bottom: 5px;
 }
-.funcionalidades-seccion > h1 span{
+.funcionalidades-seccion > h1 span,
+.clientes-seccion > h1 span{
     color: #ff9d00;
     font-family: 'Quicksand-Bold';
 }
@@ -447,7 +456,7 @@
     height: auto;
     margin: 0px;
     display: block;
-    padding-bottom: 100px;
+    padding-bottom: 94px; /*es la mitad del alto del carousel de abajo 84 + 10 de margen*/
 }
 .cursos-content > h1{
     display: block;
@@ -553,7 +562,44 @@
 .cursos-carousel{
     position: relative;
     width: 100%;
-    transform: translateY(-84px);
-    transform: translateY(calc(0% - ((100% - 25px) / 2)));
-    transform: translateY(-moz-calc(0% - ((100% - 25px) / 2)));
+    margin-top: -94px;
+}
+.cursos-carousel::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    height: calc(100% - 94px);
+    height: -moz-calc(100% - 94px);
+    bottom: 0px;
+    left: 0px;
+    background-color: #f3f3f3;
+}
+
+/*******************/
+
+.clientes-seccion{
+    position: relative;
+    width: 100%;
+    margin: 0px;
+    padding: 50px 0px;
+    box-sizing: border-box;
+    background-color: #f3f3f3;
+}
+
+.clientes-seccion > p{
+    margin-bottom: 10px;
+}
+
+.clientes-carousel{
+    position: relative;
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+    padding-bottom: 70px;
+
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: top center;
+    background-image: url(../images/home/fondo-clientes.png);
 }
