--- a/includes/components/scss/carousel.css
+++ b/includes/components/scss/carousel.css
@@ -1,18 +1,21 @@
 .app-carousel,
-.app-carousel-v2{
+.app-carousel-v2,
+.app-carousel-v3{
     position: relative;
     width: 100%;
     margin: 0px
 }
 .app-carousel-container,
-.app-carousel-v2-container{
+.app-carousel-v2-container,
+.app-carousel-v3-container{
     position: relative;
     width: 1100px;
     margin: 0px auto;
 }
 
 .app-carousel-wrap,
-.app-carousel-v2-wrap{
+.app-carousel-v2-wrap,
+.app-carousel-v3-wrap{
     position: relative;
     width: 100%;
     width: calc(100% - (70px * 2));
@@ -24,7 +27,8 @@
     padding-top: 5px;
 }
 .app-carousel-wrapper,
-.app-carousel-v2-wrapper{
+.app-carousel-v2-wrapper,
+.app-carousel-v3-wrapper{
     position: relative;
     width: auto;
     height: auto;
@@ -34,13 +38,13 @@
     justify-content: flex-start;
     left: 0%;
 }
-.app-carousel-wrapper{
+.app-carousel-wrapper,
+.app-carousel-v3-wrapper{
     transition: left 0.5s ease-in-out;
 }
 .app-carousel-v2-wrapper{
     transition: left 1s ease-in-out;
 }
-
 
 .app-carousel-prev-btn,
 .app-carousel-next-btn{
@@ -55,9 +59,6 @@
     background-repeat: no-repeat;
     background-size: 16px 28px;
     background-position: center;
-    top: 50%;
-    top: calc(50% - 25px);
-    top: -moz-calc(50% - 25px);
     cursor: pointer;
 
     transition: transform 0.25s, box-shadow 0.25s;
@@ -78,4 +79,8 @@
 .app-carousel-next-btn:hover{
     transform: scale(1.2);
     box-shadow: 0px 2px 5px -2px rgba(0,0,0,0.5);
+}
+
+.app-carousel-locked-btn{
+    
 }
