--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,16 +13,8 @@ h1,h2,h3,h4,h5,h6,p,li,a,ol,span{
     position: relative;
     width: 100%;
     height: auto;
+    background-color: rgba(255,255,255,0);
     margin: 0px;
-    padding: 100px 0px;
-}
-.container{
-    position: relative;
-    width: 100%;
-    height: auto;
-    background-color: #f3f3f3;
-    margin: 0px;
-    padding: 25px 0px;
 }
 .container-black{
     position: relative;
@@ -30,7 +22,29 @@ h1,h2,h3,h4,h5,h6,p,li,a,ol,span{
     height: auto;
     background-color: #010101;
     margin: 0px;
+}
+.container{
+    position: relative;
+    width: 100%;
+    height: auto;
+    background-color: #f3f3f3;
+    margin: 0px;
+}
+
+.py-100{
     padding: 100px 0px;
+}
+.pt-100{
+    padding-top: 100px;
+}
+.py-50{
+    padding: 50px 0px;
+}
+.py-25{
+    padding: 25px 0px;
+}
+.pb-25{
+    padding-bottom: 25px;
 }
 
 .submain-text{
@@ -153,7 +167,26 @@ h1,h2,h3,h4,h5,h6,p,li,a,ol,span{
     height: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     margin: 0px;
     padding: 0px;
+}
+
+.main-col{
+    position: relative;
+    width: 1040px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px auto;
+}
+
+.main-row{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    box-sizing: border-box;
+    flex-wrap: wrap;
 }
